# Rust_GL_Stuff

./: Cargo.toml  README.md
assets/shaders/: passthrough.frag  passthrough.vert
shaders/: passthrough.frag  passthrough.vert
src/: main.rs  math.rs  particles.rs  renderer.rs
src/filewatcher/: mod.rs
src/math/: mat4.rs  mat4_impl.rs  mod.rs  quat.rs  vec3.rs  vec3_util.rs  vec4.rs  vec4_util.rs
src/particles/: emitter.rs  particle.rs
src/renderer/: mod.rs  presentation.rs  shading.rs  states.rs
src/renderer/presentation/: renderpass.rs
src/renderer/shading/: mod.rs  pipeline.rs  shader.rs
src/renderer/states/: adapter.rs  backend.rs  buffer.rs  device.rs  window.rs
src/shading/: mod.rs
